hphp/hack/test/typecheck/expression_trees/default_parameter.php.exp
File "default_parameter.php", line 5, characters 59-62:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 54-55:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 6, characters 26-33:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "default_parameter.php", line 5, characters 64-64:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 54-55:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 19, characters 26-32:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "default_parameter.php", line 5, characters 64-64:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 54-55:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 44, characters 19-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "default_parameter.php", line 9, characters 49-52:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 44-45:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 6, characters 26-33:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "default_parameter.php", line 9, characters 54-54:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 44-45:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 19, characters 26-32:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
File "default_parameter.php", line 9, characters 54-54:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 44-45:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 44, characters 19-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, System, WriteProperty}
